src/style.css
/*------------------------*/ /* Global CSS Variables */ /*--------------------*/
:root {
    --base-bg-color:  rgb(112, 118, 118); /* rgb(139, 203, 224);*/
    --secondary-bg-color: rgb(66, 66, 66); /* rgb(96, 173, 198);*/
    --green-accent: rgb(141, 233, 172);
    --purple-accent: rgb(150, 164, 229); /* 110–127–207*/
    --gold-accent: rgb(255, 170, 0); 
    --base-text-color: white; /* white; */
    --base-text-shadow: 2px 2px rgb( 0, 0, 0, 0.26);
    --base-hover-color: rgb(50, 50, 50); 
    --base-bg-hover-color:  rgb(96, 173, 194); 
    --secondary-boarder-color: rgb(204, 204, 204);
    --base-border-style: solid;
    --secondary-boarder-style: double;
    --base-border-width: 1px;
    --base-wide-border-width: 6px;
    --base-border-color: rgb(96, 173, 198);
    --base-font-family: Helvetica, Arial, sans-serif;
  
    --workspace-bg-color: rgb(50, 50, 50); 
  }
  
/*------------------*/ /* Global Styles for Element Types */ /*---------------*/
 
html,
.fullscreen {
    /*display: flex;*/
    height: 100%;
    margin: 0;
    padding: 0;
    width: 100%;
}

body {
    background: var(--base-bg-color);
    font-family: var(--base-font-family), sans-serif;
}

#app-content p {
    color: var(--base-text-color);
    text-align: center;
    background-color: var(--base-bg-color);
    margin: auto;
    font-size: 1.5rem;
    text-shadow: var(--base-text-shadow);
}

#app-content label,
#app-content span {
    color: var(--base-text-color);
    text-shadow: var(--base-text-shadow);
}

#app-content select,
#app-content input,
#app-content textarea {
    resize: none;
    color: var(--base-text-color);
    font-size: 1rem;
    font-family: Helvetica, Arial, sans-serif;
    background-color: var(--workspace-bg-color);
    border-color: var(--secondary-boarder-color);
    border-style: var(--base-border-style);
    border-width: var(--base-border-width);

    appearance: none; /* So that it shows up correctly in Safari */
}


/*---------------------------*/ /* Containers */ /*---------------------------*/
#sign-in-screen {
    display: flex;
    flex-direction: column;
    align-items: center;
    margin-top: 10%;
    background-color: var(--secondary-bg-color);
}

#sign-out-container {
    display: flex;
    justify-content: space-between;
    background-image: linear-gradient( 177deg, var(--base-bg-hover-color) 0%, var(--secondary-bg-color) 56%);
}

h1 {
    color: var(--gold-accent);
    text-shadow: var(--base-text-shadow);
    margin-left: 0.5rem;
    
}

#tabs,
#sign-out {
    margin-bottom: 0.5rem;
}

#tabs > input {
    width: 32%;
}
#app-content {
    margin: 5%;
    text-align: center;
    flex-direction: column;
    background-color: var(--secondary-bg-color);
}

/*-------------------------*/ /* Manager Screen */ /*-------------------------*/
#userList {
    margin: 0;
    padding: 0;
    width: 200px;
    float: left;
    margin: 10px;
    border: 1px solid #4fc3fc;
}
#userList h2 {
    padding: 10px;
    margin: 0;
    color: white;
}
#userList li {
    padding: 5px 10px;
    border-top: 1px solid #4fc3fc;
    cursor: pointer;
    color: white;
    font-style: italic;
}
#userList li:hover {
    background: #4fc3fc;
}

/* Make headers sticky */
#goal-header,
#comm-header {
    position: -webkit-sticky;
    position: sticky;
    top: -2px;
    border-width: var(--base-wide-border-width) 0 var(--base-wide-border-width) 0;
    border-style: var(--secondary-boarder-style);
    border-color: var(--base-border-color);
    background: var(--base-bg-color);
}

/* Common goal and communication rules */
#goal-toolbar,
#comm-toolbar {
    display:flex;
    justify-content: space-between;
    align-items: flex-end;
    padding-bottom: 3px;
}

#goal-in > div{
    display: flex;
    justify-content: space-between;
    padding: 0 0.5rem;
}

#comm-in > div {
    display: grid;
    padding: 0 0.5rem;
    grid-template-columns: 1fr 2.5fr 2.5fr 0.5fr;
    grid-template-rows: 100%;
}

#goal-in > div:hover, 
#comm-in > div:hover {
  background-color: var(--base-bg-hover-color);
  cursor: pointer;
}

/* individual spans inside divs */
#comm-in > div > span {
    align-self: center;
}

/* Common add button styling */
#add-comm-btn,
#add-goal-btn {
    fill: var(--base-text-color);
    ;
    border-radius: 50%;
    transition: background-color 0.1s;
}
    
#add-comm-btn:hover,
#add-goal-btn:hover {
    fill: var(--base-hover-color);
    background-color: var(--base-bg-hover-color);
    text-decoration: none;
    cursor: pointer;
}

#add-comm-btn:active,
#add-goal-btn:active {
    fill:   var(--base-text-color);
}

/* ---- Modals for adding goals and communications ---- */
  /* The Modal (background) */
  #goal-modal,
  #comm-modal {
    display: none; /* Hidden by default */
    position: fixed; /* Stay in place */
    z-index: 1; /* Sit on top */
    left: 0;
    top: 0;
    width: 100%; /* Full width */
    height: 100%; /* Full height */
    overflow: auto; /* Enable scroll if needed */
    background-color: rgb(0,0,0); /* Fallback color */
    background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
  }

  /* Modal Content/Box */
  .goal-modal-content,
  .comm-modal-content {
    background-color: var(--workspace-bg-color);
    margin: 5% auto; /* 15% from the top and centered */
    padding: 20px 15px;
    border: 1px solid rgb(118, 118, 118);
    height: auto;
    width: 90%; /* Could be more or less, depending on screen size */
    border-radius: 5px; /* Round corners */
  
  }

  .comm-modal-content {
    display: grid;
    grid-template-rows: 1fr 1fr 2fr 2fr 2fr 1fr 1fr 1fr;
    align-items: center;
  }

  .comm-modal-content > div {
      display: grid;
      grid-template-columns: 1fr 2fr;
      align-items: center;
      
  }


  /* Close button styling */
.close {
    border-radius: 50%;
    transition: background-color 0.1s;
    font-size: 2rem;
    padding: 0.05rem 0.55rem;
}
    
.close:hover {
    color: var(--base-hover-color);
    background-color: var(--base-bg-hover-color);
    text-decoration: none;
    cursor: pointer;
}


  /* Change datechooser boarder to match other inputs */
  #goal-start-date-modal,
  #goal-until-date-modal,
  #comm-date-modal {
    border-width: var(--base-border-width);
    border-style: var(--base-border-style);
    border-color: var(--secondary-boarder-color);
    background-color: var(--workspace-bg-color);
  }

  #goal-btns,
  #comm-btns {
    display: flex;
    justify-content: center;
  }

  .modal-bts {
      margin: 0.5rem;
  }
  /* Extra rules for displaying comms that are linked to goals */
  #comm-type-modal:disabled{
    cursor: not-allowed;
    color: var(--base-text-color);
    border-color: var(--secondary-boarder-color);
    background-color: var(--workspace-bg-color);
    opacity: 1;
  }

  #comm-subject-modal:read-only,
  #comm-to-whom-modal:read-only,
  #comm-from-whom-modal:read-only,
  #comm-date-modal:read-only {
    cursor: not-allowed;
  }

  #comm-subject-modal:read-only,
  #comm-to-whom-modal:read-only,
  #comm-from-whom-modal:read-only,
  #comm-date-modal:read-only:focus {
    outline: none;
  }

